tests/machine/x/cobol/bool_chain.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/bool_chain.cob:7: error: syntax error, unexpected <, expecting comma delimiter
/workspace/mochi/tests/machine/x/cobol/bool_chain.cob:9: error: syntax error, unexpected <, expecting comma delimiter
/workspace/mochi/tests/machine/x/cobol/bool_chain.cob:11: error: syntax error, unexpected <, expecting comma delimiter
/workspace/mochi/tests/machine/x/cobol/bool_chain.cob: in paragraph 'BOOM':
/workspace/mochi/tests/machine/x/cobol/bool_chain.cob:15: error: syntax error, unexpected PROCEDURE

